X.26 common compile flags (#865)
* Initial branch of x.26

* Error on deprecated (#862)

* Review deprecated methods, change build to error on deprecation

* <release>8</release>

* Fix compilation on Java 21

* Don't use UnsafeText here

* Don't use UnsafeText here

* Use release 8 only for Java 11+

* MacOSX issue on modification date

* Clarify why the @Deprecated is commented out.

* Clarify why the @Deprecated is commented out.

* Use a common configuration for the compiler-plugin where deprecation warnings cause the build to fail